Make naming clearer and consistent in security config